--- a/framework/src/Degradations/Distortion3DModel/CMakeLists.txt
+++ b/framework/src/Degradations/Distortion3DModel/CMakeLists.txt
@@ -118,6 +118,7 @@ IF(BUILD_WITH_OSMESA)
 
   ADD_LIBRARY(GLAD_GL STATIC ${GLFW_DIR}/deps/glad/gl.h ${GLFW_DIR}/deps/glad_gl.c)
   TARGET_INCLUDE_DIRECTORIES(GLAD_GL PUBLIC ${GLFW_DIR}/deps)
+  SET_TARGET_PROPERTIES(GLAD_GL PROPERTIES POSITION_INDEPENDENT_CODE ON) #COMPILE_FLAGS "-fPIC")
   
 ELSE()
 
