--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,67 @@ cache: ccache
 
 jobs:
   include:
-    ###
-    # - stage: Ubuntu 14.04 (gcc-4.8.4, cmake 3.9.2) Qt 5.2.1, Debug
+    # ###
+    # # - stage: Ubuntu 14.04 (gcc-4.8.4, cmake 3.9.2) Qt 5.2.1, Debug
+    # #   os: linux
+    # #   dist: trusty
+    # #   compiler: gcc
+    # #   addons:
+    # #     apt:
+    # #       packages:
+    # #         - cmake
+    # #         - ccache
+    # #         - ninja-build
+    # #         - libpng-dev
+    # #         - libjpeg-dev
+    # #         - libopencv-dev
+    # #         - qtbase5-dev
+    # #         - qtdeclarative5-dev
+    # #         - libqt5xmlpatterns5-dev
+    # #         - libqt5opengl5-dev
+
+    # #   script:
+    # #     - cmake --version
+    # #     - gcc --version
+    # #     - ninja --version
+    # #     - qmake --version
+    # #     - qtchooser -list-versions
+    # #     - export QT_SELECT=qt5
+    # #     - qmake --version        
+    # #     - mkdir build
+    # #     - cd build
+    # #     - cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=ON
+    # #     - ninja -j 3
+    # #     - ninja test
+
+    # - stage: Ubuntu 14.04 (gcc-4.8.4, cmake 3.9.2), BUILD_ONLY_DEGRADATIONS, Debug
     #   os: linux
     #   dist: trusty
+    #   compiler: gcc
+    #   addons:
+    #     apt:
+    #       packages:
+    #         - cmake
+    #         - ccache
+    #         - ninja-build
+    #         - libpng-dev
+    #         - libjpeg-dev
+    #         - libopencv-dev
+    #   script:
+    #     - cmake --version
+    #     - gcc --version
+    #     - ninja --version
+    #     - mkdir build
+    #     - cd build
+    #     - cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=ON -DBUILD_ONLY_DEGRADATIONS=ON
+    #     - ninja -j 3 || travis_terminate 1
+    #     - ninja test
+    #     - travis_terminate 0
+
+
+    # - stage: Ubuntu 20.04 (gcc-9.3.0, cmake 3.16.8), Qt 5.12.8, Release
+    #   os: linux
+    #   dist: focal
     #   compiler: gcc
     #   addons:
     #     apt:
@@ -32,134 +89,78 @@ jobs:
     #   script:
     #     - cmake --version
     #     - gcc --version
-    #     - ninja --version
     #     - qmake --version
     #     - qtchooser -list-versions
     #     - export QT_SELECT=qt5
     #     - qmake --version        
     #     - mkdir build
     #     - cd build
-    #     - cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=ON
+    #     - cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING=ON
+    #     - ninja -j 3 || travis_terminate 1
+    #     - ninja test
+
+    # - stage: Ubuntu 16.04 (gcc-5.4.0, cmake 3.12.4), Qt 5.5.1, Release
+    #   os: linux
+    #   dist: xenial
+    #   compiler: gcc
+    #   addons:
+    #     apt:
+    #       packages:
+    #         - cmake
+    #         - ccache
+    #         - ninja-build
+    #         - libpng-dev
+    #         - libjpeg-dev
+    #         - libopencv-dev
+    #         - qtbase5-dev
+    #         - qtdeclarative5-dev
+    #         - libqt5xmlpatterns5-dev
+    #         - libqt5opengl5-dev
+
+    #   script:
+    #     - cmake --version
+    #     - gcc --version
+    #     - qmake --version
+    #     - qtchooser -list-versions
+    #     - export QT_SELECT=qt5
+    #     - qmake --version        
+    #     - mkdir build
+    #     - cd build
+    #     - cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING=ON -DBUILD_OTHER_PROGS=ON -DBUILD_OTHER_PROGS_3D=ON 
     #     - ninja -j 3
     #     - ninja test
 
-    - stage: Ubuntu 14.04 (gcc-4.8.4, cmake 3.9.2), BUILD_ONLY_DEGRADATIONS, Debug
-      os: linux
-      dist: trusty
-      compiler: gcc
-      addons:
-        apt:
-          packages:
-            - cmake
-            - ccache
-            - ninja-build
-            - libpng-dev
-            - libjpeg-dev
-            - libopencv-dev
-      script:
-        - cmake --version
-        - gcc --version
-        - ninja --version
-        - mkdir build
-        - cd build
-        - cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=ON -DBUILD_ONLY_DEGRADATIONS=ON
-        - ninja -j 3 || travis_terminate 1
-        - ninja test
-        - travis_terminate 0
 
-    - stage: Ubuntu 20.04 (gcc-7.4.0, cmake 3.10.2), Qt 5.9.5, Release
-      os: linux
-      dist: focal
-      compiler: gcc
-      addons:
-        apt:
-          packages:
-            - cmake
-            - ccache
-            - ninja-build
-            - libpng-dev
-            - libjpeg-dev
-            - libopencv-dev
-            - qtbase5-dev
-            - qtdeclarative5-dev
-            - libqt5xmlpatterns5-dev
-            - libqt5opengl5-dev
+    # - stage: Ubuntu 18.04 (gcc-7.4.0, cmake 3.10.2), Qt 5.9.5, Release
+    #   os: linux
+    #   dist: bionic
+    #   compiler: gcc
+    #   addons:
+    #     apt:
+    #       packages:
+    #         - cmake
+    #         - ccache
+    #         - ninja-build
+    #         - libpng-dev
+    #         - libjpeg-dev
+    #         - libopencv-dev
+    #         - qtbase5-dev
+    #         - qtdeclarative5-dev
+    #         - libqt5xmlpatterns5-dev
+    #         - libqt5opengl5-dev
 
-      script:
-        - cmake --version
-        - gcc --version
-        - qmake --version
-        - qtchooser -list-versions
-        - export QT_SELECT=qt5
-        - qmake --version        
-        - mkdir build
-        - cd build
-        - cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING=ON
-        - ninja -j 3 || travis_terminate 1
-        - ninja test
-
-    - stage: Ubuntu 16.04 (gcc-5.4.0, cmake 3.12.4), Qt 5.5.1, Release
-      os: linux
-      dist: xenial
-      compiler: gcc
-      addons:
-        apt:
-          packages:
-            - cmake
-            - ccache
-            - ninja-build
-            - libpng-dev
-            - libjpeg-dev
-            - libopencv-dev
-            - qtbase5-dev
-            - qtdeclarative5-dev
-            - libqt5xmlpatterns5-dev
-            - libqt5opengl5-dev
-
-      script:
-        - cmake --version
-        - gcc --version
-        - qmake --version
-        - qtchooser -list-versions
-        - export QT_SELECT=qt5
-        - qmake --version        
-        - mkdir build
-        - cd build
-        - cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING=ON
-        - ninja -j 3
-        - ninja test
-
-
-    - stage: Ubuntu 18.04 (gcc-7.4.0, cmake 3.10.2), Qt 5.9.5, Release
-      os: linux
-      dist: bionic
-      compiler: gcc
-      addons:
-        apt:
-          packages:
-            - cmake
-            - ccache
-            - ninja-build
-            - libpng-dev
-            - libjpeg-dev
-            - libopencv-dev
-            - qtbase5-dev
-            - qtdeclarative5-dev
-            - libqt5xmlpatterns5-dev
-            - libqt5opengl5-dev
-
-      script:
-        - cmake --version
-        - gcc --version
-        - qmake --version
-        - qtchooser -list-versions
-        - export QT_SELECT=qt5
-        - qmake --version        
-        - mkdir build
-        - cd build
-        - cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING=ON
-        - ninja -j 3
-        - ninja test
+    #   script:
+    #     - cmake --version
+    #     - gcc --version
+    #     - qmake --version
+    #     - qtchooser -list-versions
+    #     - export QT_SELECT=qt5
+    #     - qmake --version        
+    #     - mkdir build
+    #     - cd build
+    #     - cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING=ON
+    #     - ninja -j 3
+    #     - ninja test
 
 
     # ###
@@ -376,10 +377,66 @@ jobs:
     #     - make test
 
     
+
     ###
-    - stage: macOS 10.14, recent clang, Qt5 & OpenCV from brew, Release & Debug
+    # - stage: macOS 10.14, recent clang, Qt5 & OpenCV from brew, Release
+    #   os: osx
+    #   osx_image: xcode11.3  #macOS 10.14.6 & Xcode 11.3.1
+    #   compiler: clang
+
+    #   before_install:
+    #     - brew update
+    #     - brew list
+    #     #- brew outdated qt || brew upgrade qt
+    #     - brew install qt
+    #     - brew list
+    #     - ls /usr/local/opt/
+    #     - export PATH=$PATH:/usr/local/opt/qt/bin
+    #     #- brew outdated opencv || (pip2 uninstall -y numpy && brew upgrade opencv)
+    #     - pip2 uninstall -y numpy && brew install opencv #see https://github.com/travis-ci/travis-ci/issues/6688
+    #     - brew list
+
+    #   script:
+    #     - cmake --version
+    #     - qmake --version
+    #     - mkdir build
+    #     - cd build
+    #     - cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH=$(brew --prefix qt) -DBUILD_TESTING=ON
+    #     - make -j 3
+    #     - make test
+
+    - stage: macOS 10.14, recent clang, Qt5 & OpenCV from brew, Release
       os: osx
-      osx_image: xcode11  #macOS 10.14 & Xcode 11.0
+      osx_image: xcode11.3  #macOS 10.14.6 & Xcode 11.3.1
+      compiler: clang
+      cache:
+        directories:
+          - $HOME/Library/Caches/Homebrew
+      addons:
+        homebrew:
+          # install Tulip thirdparty build dependencies
+          packages:
+            - ccache
+            - cmake
+            - ninja
+            - llvm
+            - qt5
+            - opencv
+          update: true
+
+      script:
+        - cmake --version
+        - qmake --version
+        - mkdir build
+        - cd build
+        - cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH=$(brew --prefix qt) -DBUILD_TESTING=ON
+        - make -j 3 || travis_terminate 1
+        - make test
+        
+    ###
+    - stage: macOS 10.15, recent clang, Qt5 & OpenCV from brew, Release & Debug
+      os: osx
+      osx_image: xcode12  #macOS 10.15.5 & Xcode 12.0
       compiler: clang
 
       before_install:
@@ -400,8 +457,41 @@ jobs:
         - mkdir build
         - cd build
         - cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH=$(brew --prefix qt) -DBUILD_TESTING=ON
+        - make -j 3 || travis_terminate 1
+        - make test || travis_terminate 1
+        - cd ..
+        - mkdir buildDebug
+        - cd buildDebug
+        - cmake .. -DCMAKE_BUILD_TYPE=Debug -DCMAKE_PREFIX_PATH=$(brew --prefix qt) -DBUILD_TESTING=ON
         - make -j 3
         - make test
+
+    ###
+    - stage: macOS 10.13, recent clang, Qt5 & OpenCV from brew, Release & Debug
+      os: osx
+      osx_image: xcode10.1  #macOS 10.13 & Xcode 10.1
+      compiler: clang
+
+      before_install:
+        - brew update
+        - brew list
+        #- brew outdated qt || brew upgrade qt
+        - brew install qt
+        - brew list
+        - ls /usr/local/opt/
+        - export PATH=$PATH:/usr/local/opt/qt/bin
+        #- brew outdated opencv || (pip2 uninstall -y numpy && brew upgrade opencv)
+        - pip2 uninstall -y numpy && brew install opencv #see https://github.com/travis-ci/travis-ci/issues/6688
+        - brew list
+
+      script:
+        - cmake --version
+        - qmake --version
+        - mkdir build
+        - cd build
+        - cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH=$(brew --prefix qt) -DBUILD_TESTING=ON
+        - make -j 3 || travis_terminate 1
+        - make test || travis_terminate 1
         - cd ..
         - mkdir buildDebug
         - cd buildDebug
