--- a/software/DocCreator/CMakeLists.txt
+++ b/software/DocCreator/CMakeLists.txt
@@ -229,33 +229,44 @@ IF(BUILD_TESSERACT)
   IF(GIF_FOUND)
     SET(OTHER_LIBS "${GIF_LIBRARIES};${OTHER_LIBS}")
   ENDIF()
+
+  message("OTHER_LIBS=${OTHER_LIBS}")
   
   FIND_PACKAGE(PkgConfig QUIET)
   IF (PKG_CONFIG_FOUND)
+    message("search with pkg config")
     pkg_check_modules(WEBP QUIET libwebp)
     IF(WEBP_FOUND)
-      SET(OTHER_LIBS "${WEBP_LIBRARIES};${OTHER_LIBS}")
+      #SET(OTHER_LIBS "${WEBP_LIBRARIES};${OTHER_LIBS}")
+      message("WEBP_FOUND=${WEBP_FOUND} by pkg: $WEBP_LIBRARY=${WEBP_LIBRARY} $WEBP_LIBRARIES=${WEBP_LIBRARIES} WEBP=${WEBP}")
     ENDIF()
     pkg_check_modules(JP2K QUIET libopenjp2)
     IF(JP2K_FOUND)
-      SET(OTHER_LIBS "${JP2K_LIBRARIES};${OTHER_LIBS}")
+      #SET(OTHER_LIBS "${JP2K_LIBRARIES};${OTHER_LIBS}")
+      message("JP2K_FOUND=${JP2K_FOUND} by pkg: $JP2K_LIBRARY=${WEBP_LIBRARY} $JP2K_LIBRARIES=${WEBP_LIBRARIES} JP2K=${JP2K}")
     ENDIF()
   ENDIF()
   if(NOT WEBP)
+    message("search webp directly")
     find_path(WEBP_INCLUDE_DIR /webp/decode.h)
     find_library(WEBP_LIBRARY NAMES webp)
     if (WEBP_INCLUDE_DIR AND WEBP_LIBRARY)
+      message("WEBP_FOUND2=${WEBP_FOUND}: $WEBP_LIBRARY=${WEBP_LIBRARY} $WEBP_LIBRARIES=${WEBP_LIBRARIES} WEBP=${WEBP}")
       set(OTHER_LIBS "${WEBP_LIBRARY};${OTHER_LIBS}")
     endif()
   endif()
   if(NOT JP2K)
+    message("search jp2k directly")
     find_path(JP2K_INCLUDE_DIR /openjpeg-2.3/openjpeg.h)
     find_library(JP2K_LIBRARY NAMES openjp2)
     if (JP2K_INCLUDE_DIR AND JP2K_LIBRARY)
+      message("JP2K_FOUND2=${JP2K_FOUND}: $JP2K_LIBRARY=${JP2K_LIBRARY} $JP2K_LIBRARIES=${JP2K_LIBRARIES} JP2K=${JP2K}")
       set(OTHER_LIBS "${JP2K_LIBRARY};${OTHER_LIBS}")
     endif()
   endif()
 
+  message("OTHER_LIBS=${OTHER_LIBS}")
+    
   SET(Lept_LIBRARIES "${LEPTONICA_LIBRARY};${OTHER_LIBS}")
   SET(Tesseract_LIBRARIES ${TESSERACT_LIBRARY})
   IF(MSVC OR MINGW)
@@ -274,6 +285,7 @@ IF(BUILD_TESSERACT)
 ENDIF()
 
 SET(Tesseract_LIBRARIES "${Tesseract_LIBRARIES};${Lept_LIBRARIES}")
+message("Tesseract_LIBRARIES=${Tesseract_LIBRARIES}")
 
 
 ######################################## TESSERACT
