--- a/.travis.yml
+++ b/.travis.yml
@@ -43,124 +43,123 @@ jobs:
     # #     - ninja -j 3
     # #     - ninja test
 
-    # - stage: Ubuntu 14.04 (gcc-4.8.4, cmake 3.9.2), BUILD_ONLY_DEGRADATIONS, Debug
-    #   os: linux
-    #   dist: trusty
-    #   compiler: gcc
-    #   addons:
-    #     apt:
-    #       packages:
-    #         - cmake
-    #         - ccache
-    #         - ninja-build
-    #         - libpng-dev
-    #         - libjpeg-dev
-    #         - libopencv-dev
-    #   script:
-    #     - cmake --version
-    #     - gcc --version
-    #     - ninja --version
-    #     - mkdir build
-    #     - cd build
-    #     - cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=ON -DBUILD_ONLY_DEGRADATIONS=ON
-    #     - ninja -j 3 || travis_terminate 1
-    #     - ninja test
-    #     - travis_terminate 0
+    - stage: Ubuntu 14.04 (gcc-4.8.4, cmake 3.9.2), BUILD_ONLY_DEGRADATIONS, ninja, Debug
+      os: linux
+      dist: trusty
+      compiler: gcc
+      addons:
+        apt:
+          packages:
+            - cmake
+            - ccache
+            - ninja-build
+            - libpng-dev
+            - libjpeg-dev
+            - libopencv-dev
+      script:
+        - cmake --version
+        - gcc --version
+        - ninja --version
+        - mkdir build
+        - cd build
+        - cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTING=ON -DBUILD_ONLY_DEGRADATIONS=ON
+        - ninja -j 3 || travis_terminate 1
+        - ninja test
+        - travis_terminate 0
 
 
-    # - stage: Ubuntu 20.04 (gcc-9.3.0, cmake 3.16.8), Qt 5.12.8, Release
-    #   os: linux
-    #   dist: focal
-    #   compiler: gcc
-    #   addons:
-    #     apt:
-    #       packages:
-    #         - cmake
-    #         - ccache
-    #         - ninja-build
-    #         - libpng-dev
-    #         - libjpeg-dev
-    #         - libopencv-dev
-    #         - qtbase5-dev
-    #         - qtdeclarative5-dev
-    #         - libqt5xmlpatterns5-dev
-    #         - libqt5opengl5-dev
+    - stage: Ubuntu 20.04 (gcc-9.3.0, cmake 3.16.8), Qt 5.12.8, ninja, Release
+      os: linux
+      dist: focal
+      compiler: gcc
+      addons:
+        apt:
+          packages:
+            - cmake
+            - ccache
+            - ninja-build
+            - libpng-dev
+            - libjpeg-dev
+            - libopencv-dev
+            - qtbase5-dev
+            - qtdeclarative5-dev
+            - libqt5xmlpatterns5-dev
+            - libqt5opengl5-dev
 
-    #   script:
-    #     - cmake --version
-    #     - gcc --version
-    #     - qmake --version
-    #     - qtchooser -list-versions
-    #     - export QT_SELECT=qt5
-    #     - qmake --version        
-    #     - mkdir build
-    #     - cd build
-    #     - cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING=ON
-    #     - ninja -j 3 || travis_terminate 1
-    #     - ninja test
+      script:
+        - cmake --version
+        - gcc --version
+        - qmake --version
+        - qtchooser -list-versions
+        - export QT_SELECT=qt5
+        - qmake --version        
+        - mkdir build
+        - cd build
+        - cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING=ON
+        - ninja -j 3 || travis_terminate 1
+        - ninja test
 
-    # - stage: Ubuntu 16.04 (gcc-5.4.0, cmake 3.12.4), Qt 5.5.1, Release
-    #   os: linux
-    #   dist: xenial
-    #   compiler: gcc
-    #   addons:
-    #     apt:
-    #       packages:
-    #         - cmake
-    #         - ccache
-    #         - ninja-build
-    #         - libpng-dev
-    #         - libjpeg-dev
-    #         - libopencv-dev
-    #         - qtbase5-dev
-    #         - qtdeclarative5-dev
-    #         - libqt5xmlpatterns5-dev
-    #         - libqt5opengl5-dev
+    - stage: Ubuntu 16.04 (gcc-5.4.0, cmake 3.12.4), Qt 5.5.1, ninja, Release
+      os: linux
+      dist: xenial
+      compiler: gcc
+      addons:
+        apt:
+          packages:
+            - cmake
+            - ccache
+            - ninja-build
+            - libpng-dev
+            - libjpeg-dev
+            - libopencv-dev
+            - qtbase5-dev
+            - qtdeclarative5-dev
+            - libqt5xmlpatterns5-dev
+            - libqt5opengl5-dev
 
-    #   script:
-    #     - cmake --version
-    #     - gcc --version
-    #     - qmake --version
-    #     - qtchooser -list-versions
-    #     - export QT_SELECT=qt5
-    #     - qmake --version        
-    #     - mkdir build
-    #     - cd build
-    #     - cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING=ON -DBUILD_OTHER_PROGS=ON -DBUILD_OTHER_PROGS_3D=ON 
-    #     - ninja -j 3
-    #     - ninja test
+      script:
+        - cmake --version
+        - gcc --version
+        - qmake --version
+        - qtchooser -list-versions
+        - export QT_SELECT=qt5
+        - qmake --version        
+        - mkdir build
+        - cd build
+        - cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING=ON -DBUILD_OTHER_PROGS=ON -DBUILD_OTHER_PROGS_3D=ON 
+        - ninja -j 3
+        - ninja test
 
 
-    # - stage: Ubuntu 18.04 (gcc-7.4.0, cmake 3.10.2), Qt 5.9.5, Release
-    #   os: linux
-    #   dist: bionic
-    #   compiler: gcc
-    #   addons:
-    #     apt:
-    #       packages:
-    #         - cmake
-    #         - ccache
-    #         - ninja-build
-    #         - libpng-dev
-    #         - libjpeg-dev
-    #         - libopencv-dev
-    #         - qtbase5-dev
-    #         - qtdeclarative5-dev
-    #         - libqt5xmlpatterns5-dev
-    #         - libqt5opengl5-dev
+    - stage: Ubuntu 18.04 (gcc-7.4.0, cmake 3.10.2), Qt 5.9.5, make, Release
+      os: linux
+      dist: bionic
+      compiler: gcc
+      addons:
+        apt:
+          packages:
+            - cmake
+            - ccache
+            - libpng-dev
+            - libjpeg-dev
+            - libopencv-dev
+            - qtbase5-dev
+            - qtdeclarative5-dev
+            - libqt5xmlpatterns5-dev
+            - libqt5opengl5-dev
 
-    #   script:
-    #     - cmake --version
-    #     - gcc --version
-    #     - qmake --version
-    #     - qtchooser -list-versions
-    #     - export QT_SELECT=qt5
-    #     - qmake --version        
-    #     - mkdir build
-    #     - cd build
-    #     - cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING=ON
-    #     - ninja -j 3
-    #     - ninja test
+      script:
+        - cmake --version
+        - gcc --version
+        - qmake --version
+        - qtchooser -list-versions
+        - export QT_SELECT=qt5
+        - qmake --version        
+        - mkdir build
+        - cd build
+        - cmake .. -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING=ON
+        - make -j 4
+        - make test
 
 
     # ###
@@ -459,7 +458,7 @@ jobs:
         - ninja test
 
     ###
-    - stage: macOS 10.13, recent clang, Qt5 & OpenCV from brew, Release & Debug
+    - stage: macOS 10.13, recent clang, Qt5 & OpenCV from brew, make, Release & Debug
       os: osx
       osx_image: xcode10.1  #macOS 10.13 & Xcode 10.1
       compiler: clang
