add pybind11 python wrapper

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,6 +128,8 @@ if (NOT BUILD_OTHER_PROGS_3D)
 endif (NOT BUILD_OTHER_PROGS_3D)
 
 
+OPTION(BUILD_PYTHON_WRAPPER "Build python wrapper" OFF)
+
 OPTION(BUILD_TESTING "Build tests" OFF)
 
 if (BUILD_TESTING)
@@ -185,6 +187,9 @@ IF(NOT BUILD_ONLY_DEGRADATIONS)
 
 ENDIF(NOT BUILD_ONLY_DEGRADATIONS)
 
+if (BUILD_PYTHON_WRAPPER)
+  add_subdirectory (wrapper/python)
+endif(BUILD_PYTHON_WRAPPER)
 
 if (BUILD_TESTING)
   add_subdirectory (${PROJECT_SOURCE_DIR}/tests)
